--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
+    "dev": "nodemon",
+    "dev:server": "ts-node src/index.ts",
     "prestart": "yarn build",
-    "start": "node .",
+    "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -42,6 +44,8 @@
     "@types/react-dom": "^16.9.5",
     "nodemon": "^2.0.2",
     "parcel-bundler": "^1.12.4",
+    "react-hot-loader": "^4.12.19",
+    "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
