--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
 	},
 	"homepage": "https://github.com/jayblack388/ts-node-react#readme",
 	"dependencies": {
+		"@types/jsonwebtoken": "^8.5.0",
+		"apollo-server-express": "^2.16.1",
 		"body-parser": "^1.19.0",
 		"colors": "^1.4.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.27",
 		"morgan": "^1.9.1",
 		"per-env": "^1.0.2",
