--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 	},
 	"homepage": "https://github.com/jayblack388/ts-node-react#readme",
 	"dependencies": {
-		"@types/jsonwebtoken": "^8.5.0",
 		"apollo-server-express": "^2.16.1",
+		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
 		"colors": "^1.4.0",
 		"cors": "^2.8.5",
@@ -40,8 +40,10 @@
 		"react-dom": "^16.12.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^3.0.0",
 		"@types/cors": "^2.8.6",
 		"@types/express": "^4.17.2",
+		"@types/jsonwebtoken": "^8.5.0",
 		"@types/mongoose": "^5.7.1",
 		"@types/morgan": "^1.7.37",
 		"@types/multer": "^1.4.2",
