--- a/package.json
+++ b/package.json
@@ -1,52 +1,67 @@
 {
-  "name": "ts-node-react",
-  "version": "1.0.0",
-  "description": "A Typescript Node/React Template for quick starts",
-  "main": "dist/index.js",
-  "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "dev": "nodemon",
-    "dev:server": "ts-node src/index.ts",
-    "prestart": "yarn build",
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jayblack388/ts-node-react.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jayblack388/ts-node-react/issues"
-  },
-  "homepage": "https://github.com/jayblack388/ts-node-react#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "morgan": "^1.9.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
-    "@types/mongoose": "^5.7.1",
-    "@types/morgan": "^1.7.37",
-    "@types/multer": "^1.4.2",
-    "@types/node": "^13.7.1",
-    "@types/parcel-bundler": "^1.12.1",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "nodemon": "^2.0.2",
-    "parcel-bundler": "^1.12.4",
-    "react-hot-loader": "^4.12.19",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
-    "typescript": "^3.7.5"
-  }
+	"name": "ts-node-react",
+	"version": "1.0.0",
+	"description": "A Typescript Node/React Template for quick starts",
+	"main": "dist/index.js",
+	"scripts": {
+		"prebuild:production": "tslint -c tslint.json -p tsconfig.json --fix",
+		"build:production": "tsc",
+		"dev:server": "ts-node src/index.ts",
+		"start": "per-env",
+		"start:development": "nodemon .",
+		"prestart:production": "yarn build:production",
+		"start:production": "node .",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jayblack388/ts-node-react.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/jayblack388/ts-node-react/issues"
+	},
+	"homepage": "https://github.com/jayblack388/ts-node-react#readme",
+	"dependencies": {
+		"@apollo/client": "^3.1.2",
+		"apollo-server-express": "^2.16.1",
+		"bcrypt": "^5.0.0",
+		"body-parser": "^1.19.0",
+		"colors": "^1.4.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"graphql-tag": "^2.11.0",
+		"jsonwebtoken": "^8.5.1",
+		"jwt-decode": "^2.2.0",
+		"mongoose": "^5.9.27",
+		"morgan": "^1.9.1",
+		"per-env": "^1.0.2",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-router-dom": "^5.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.11.1",
+		"@babel/plugin-transform-runtime": "^7.11.0",
+		"@types/bcrypt": "^3.0.0",
+		"@types/cors": "^2.8.6",
+		"@types/express": "^4.17.2",
+		"@types/jsonwebtoken": "^8.5.0",
+		"@types/mongoose": "^5.7.1",
+		"@types/morgan": "^1.7.37",
+		"@types/multer": "^1.4.2",
+		"@types/node": "^13.7.1",
+		"@types/parcel-bundler": "^1.12.1",
+		"@types/react": "^16.9.19",
+		"@types/react-dom": "^16.9.5",
+		"nodemon": "^2.0.4",
+		"parcel-bundler": "^1.12.4",
+		"react-hot-loader": "^4.12.19",
+		"ts-node": "^8.6.2",
+		"tslint": "^6.0.0",
+		"typescript": "^3.7.5"
+	}
 }
