compose up is finally working

--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
 	"description": "A Typescript Node/React Template for quick starts",
 	"main": "dist/index.js",
 	"scripts": {
+		"ci": "yarn install --frozen-lockfile",
+		"prebuild": "per-env",
+		"prebuild:development": "tslint -c tslint.json -p tsconfig.json --fix",
 		"prebuild:production": "tslint -c tslint.json -p tsconfig.json --fix",
+		"build": "per-env",
+		"build:development": "tsc",
 		"build:production": "tsc",
 		"dev:server": "ts-node src/index.ts",
 		"start": "per-env",
 		"start:development": "nodemon .",
-		"prestart:production": "yarn build:production",
 		"start:production": "node .",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -49,12 +53,15 @@
 		"@types/bcrypt": "^3.0.0",
 		"@types/cors": "^2.8.6",
 		"@types/express": "^4.17.2",
+		"@types/isomorphic-fetch": "^0.0.35",
 		"@types/jsonwebtoken": "^8.5.0",
+		"@types/jwt-decode": "^2.2.1",
 		"@types/mongoose": "^5.7.1",
 		"@types/morgan": "^1.7.37",
 		"@types/multer": "^1.4.2",
 		"@types/node": "^13.7.1",
 		"@types/parcel-bundler": "^1.12.1",
+		"@types/query-string": "^6.3.0",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
 		"nodemon": "^2.0.4",
