--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,17 @@ services:
     container_name: app
     restart: always
     build: .
-    environment:
-      - PORT=5050
-      - BASE_URL=http://localhost
-      - MONGODB_URI=mongodb://mongo:27017/merndat
-      - NODE_ENV=production
-      - NODE_NO_WARNINGS=1
-      - TOKEN_EXPIRATION=2h
-      - TOKEN_SECRET=woooahIt$ASeCrEt
+    env_file: .env.example
+    # environment:
+    #   - PORT=5000
+    #   - BASE_URL=http://localhost
+    #   - MONGODB_URI=mongodb://mongo:27017/merndat
+    #   - NODE_ENV=production
+    #   - NODE_NO_WARNINGS=1
+    #   - TOKEN_EXPIRATION=2h
+    #   - TOKEN_SECRET=woooahItsASeCrEt
     ports:
-      - "5050:5050"
+      - "5000:5000"
     links:
       - mongo
   mongo:
