new packages, minor updates

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+APOLLO_KEY=service:......
 BASE_URL=http://localhost
-MONGODB_URI=mongodb+srv://<USER>:<PASSWORD>@cluster0.aafx0.mongodb.net/<DATABASE_NAME>?retryWrites=true&w=majority
+MONGODB_URI=mongodb://mongo:27017/merndat
+NODE_ENV=development
+NODE_NO_WARNINGS=1
 PORT=5000
 TOKEN_EXPIRATION=2h
 TOKEN_SECRET=some_kind_of_secret
