--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"ci": "yarn install --frozen-lockfile",
+		"codegen": "apollo client:codegen ./src/client/Apollo --target typescript --watch",
 		"prebuild": "per-env",
 		"prebuild:development": "tslint -c tslint.json -p tsconfig.json --fix",
 		"prebuild:production": "tslint -c tslint.json -p tsconfig.json --fix",
@@ -64,6 +65,7 @@
 		"@types/query-string": "^6.3.0",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
+		"apollo": "^2.30.2",
 		"nodemon": "^2.0.4",
 		"parcel-bundler": "^1.12.4",
 		"react-hot-loader": "^4.12.19",
