--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-APOLLO_KEY=service:......
+APOLLO_KEY=service:merndat:9F-UCg-kwdBaL_4h3PMGNA
 BASE_URL=http://localhost
 MONGODB_URI=mongodb://mongo:27017/merndat
+GOOGLE_CLIENT_ID=INSERT_GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=INSERT_GOOGLE_CLIENT_SECRET
+GOOGLE_REDIRECT_URI=INSERT_GOOGLE_REDIRECT_URI
 NODE_ENV=development
 NODE_NO_WARNINGS=1
 PORT=5000
